<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="student.maxim.lab_3.MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorStart"
        android:onClick="startPressed"
        android:text="@string/start_button"
        android:textColorLink="@color/colorStart"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@color/colorStop"
        android:onClick="stopPressed"
        android:text="@string/stop_button"
        android:textColorLink="@color/colorStop"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:contextClickable="false"
        android:text="@string/time_text_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/chronometer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/distance_text_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textDistance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="30dp"
        android:text="@string/distance_val"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/speed_text_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toStartOf="@+id/textSpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="30dp"
        android:text="@string/speed_val"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="32dp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="30dp"
        android:text="@string/time_val"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="30dp" />

</android.support.constraint.ConstraintLayout>
